# hmmCNV

./: .gitignore  MANIFEST.in  README.md  build.py  environment.yml  pyproject.toml  requirements.txt  setup.py
hmmCNV/: __init__.py  em_utilities.py  hmmCNV.py  hmm_utilities.py
hmmCNV/hmm/: __init__.py  hmm.c  hmm.pyx  utilities.c
tests/: ichorCNA_norm_counts.txt  test.py  test_rkx001_100kbins.txt
